@@ -25,60 +25,104 @@ import org.apache.lucene.search.TwoPhaseIterator;
 
 /**
  * A {@link Spans} implementation wrapping another spans instance,
- * allowing to override selected methods in a subclass.
+ * allowing to filter spans matches easily by implementing {@link #accept}
  */
 public abstract class FilterSpans extends Spans {
  
   /** The wrapped spans instance. */
   protected final Spans in;
   
+  private boolean atFirstInCurrentDoc = false;
+  private int startPos = -1;
+  
   /** Wrap the given {@link Spans}. */
-  public FilterSpans(Spans in) {
+  protected FilterSpans(Spans in) {
     this.in = Objects.requireNonNull(in);
   }
   
+  /** 
+   * Returns YES if the candidate should be an accepted match,
+   * NO if it should not, and NO_MORE_IN_CURRENT_DOC if iteration
+   * should move on to the next document.
+   */
+  protected abstract AcceptStatus accept(Spans candidate) throws IOException;
+  
   @Override
-  public int nextDoc() throws IOException {
-    return in.nextDoc();
+  public final int nextDoc() throws IOException {
+    while (true) {
+      int doc = in.nextDoc();
+      if (doc == NO_MORE_DOCS) {
+        return NO_MORE_DOCS;
+      } else if (twoPhaseCurrentDocMatches()) {
+        return doc;
+      }
+    }
   }
 
   @Override
-  public int advance(int target) throws IOException {
-    return in.advance(target);
+  public final int advance(int target) throws IOException {
+    int doc = in.advance(target);
+    while (doc != NO_MORE_DOCS) {
+      if (twoPhaseCurrentDocMatches()) {
+        break;
+      }
+      doc = in.nextDoc();
+    }
+
+    return doc;
   }
 
   @Override
-  public int docID() {
+  public final int docID() {
     return in.docID();
   }
 
   @Override
-  public int nextStartPosition() throws IOException {
-    return in.nextStartPosition();
+  public final int nextStartPosition() throws IOException {
+    if (atFirstInCurrentDoc) {
+      atFirstInCurrentDoc = false;
+      return startPos;
+    }
+
+    for (;;) {
+      startPos = in.nextStartPosition();
+      if (startPos == NO_MORE_POSITIONS) {
+        return NO_MORE_POSITIONS;
+      }
+      switch(accept(in)) {
+        case YES:
+          return startPos;
+        case NO:
+          break;
+        case NO_MORE_IN_CURRENT_DOC:
+          return startPos = NO_MORE_POSITIONS; // startPos ahead for the current doc.
+      }
+    }
   }
 
   @Override
-  public int startPosition() {
-    return in.startPosition();
+  public final int startPosition() {
+    return atFirstInCurrentDoc ? -1 : startPos;
+  }
+
+  @Override
+  public final int endPosition() {
+    return atFirstInCurrentDoc ? -1
+          : (startPos != NO_MORE_POSITIONS) ? in.endPosition() : NO_MORE_POSITIONS;
   }
   
   @Override
-  public int endPosition() {
-    return in.endPosition();
-  }
-  
-  @Override
-  public Collection<byte[]> getPayload() throws IOException {
+  public final Collection<byte[]> getPayload() throws IOException {
     return in.getPayload();
   }
 
   @Override
-  public boolean isPayloadAvailable() throws IOException {
+  public final boolean isPayloadAvailable() throws IOException {
     return in.isPayloadAvailable();
   }
   
   @Override
-  public long cost() {
+  public final long cost() {
     return in.cost();
   }
   
@@ -88,7 +132,7 @@ public abstract class FilterSpans extends Spans {
   }
   
   @Override
-  public TwoPhaseIterator asTwoPhaseIterator() {
+  public final TwoPhaseIterator asTwoPhaseIterator() {
     final TwoPhaseIterator inner = in.asTwoPhaseIterator();
     if (inner != null) {
       // wrapped instance has an approximation
@@ -115,5 +159,46 @@ public abstract class FilterSpans extends Spans {
    * <p>
    * This is called during two-phase processing.
    */
-  public abstract boolean twoPhaseCurrentDocMatches() throws IOException;
+  // return true if the current document matches
+  @SuppressWarnings("fallthrough")
+  private final boolean twoPhaseCurrentDocMatches() throws IOException {
+    atFirstInCurrentDoc = false;
+    startPos = in.nextStartPosition();
+    assert startPos != NO_MORE_POSITIONS;
+    for (;;) {
+      switch(accept(in)) {
+        case YES:
+          atFirstInCurrentDoc = true;
+          return true;
+        case NO:
+          startPos = in.nextStartPosition();
+          if (startPos != NO_MORE_POSITIONS) {
+            break;
+          }
+          // else fallthrough
+        case NO_MORE_IN_CURRENT_DOC:
+          startPos = -1;
+          return false;
+      }
+    }
+  }
+  
+  /**
+   * Status returned from {@link FilterSpans#accept(Spans)} that indicates
+   * whether a candidate match should be accepted, rejected, or rejected
+   * and move on to the next document.
+   */
+  public static enum AcceptStatus {
+    /** Indicates the match should be accepted */
+    YES,
+
+    /** Indicates the match should be rejected */
+    NO,
+
+    /**
+     * Indicates the match should be rejected, and the enumeration may continue
+     * with the next document.
+     */
+    NO_MORE_IN_CURRENT_DOC
+  };
 }
